--- a/src/tokosembakoberkah/view/SupplierPelanggan/SupplierPelanggan.form
+++ b/src/tokosembakoberkah/view/SupplierPelanggan/SupplierPelanggan.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -211,7 +211,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="tabelbarang">
+                <Component class="javax.swing.JTable" name="tabel">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="49" green="31" red="14" type="rgb"/>
@@ -224,8 +224,8 @@
                     </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="6" rowCount="10">
-                        <Column editable="false" title="id" type="java.lang.Object"/>
-                        <Column editable="false" title="NO" type="java.lang.Object">
+                        <Column editable="true" title="id" type="java.lang.Object"/>
+                        <Column editable="true" title="NO" type="java.lang.Object">
                           <Data value="1"/>
                           <Data value="2"/>
                           <Data value="null"/>
@@ -237,9 +237,21 @@
                           <Data value="null"/>
                           <Data value="null"/>
                         </Column>
-                        <Column editable="false" title="TYPE" type="java.lang.Object">
-                          <Data value="SQS"/>
-                          <Data value="WD"/>
+                        <Column editable="true" title="TYPE" type="java.lang.Object">
+                          <Data value="Supplier"/>
+                          <Data value="Suppler"/>
+                          <Data value=""/>
+                          <Data value="null"/>
+                          <Data value="null"/>
+                          <Data value="null"/>
+                          <Data value="null"/>
+                          <Data value="null"/>
+                          <Data value="null"/>
+                          <Data value="null"/>
+                        </Column>
+                        <Column editable="true" title="NAMA" type="java.lang.Object">
+                          <Data value="PT Angkas"/>
+                          <Data value="PT MUJUR"/>
                           <Data value="null"/>
                           <Data value="null"/>
                           <Data value="null"/>
@@ -249,9 +261,9 @@
                           <Data value="null"/>
                           <Data value="null"/>
                         </Column>
-                        <Column editable="false" title="NAMA" type="java.lang.Object">
-                          <Data value="SQS"/>
-                          <Data value="SQW"/>
+                        <Column editable="true" title="ALAMAT" type="java.lang.Object">
+                          <Data value="Jln Mujair"/>
+                          <Data value="Jln Apui"/>
                           <Data value="null"/>
                           <Data value="null"/>
                           <Data value="null"/>
@@ -261,21 +273,9 @@
                           <Data value="null"/>
                           <Data value="null"/>
                         </Column>
-                        <Column editable="false" title="ALAMAT" type="java.lang.Object">
-                          <Data value="QSQS"/>
-                          <Data value="QW"/>
-                          <Data value="null"/>
-                          <Data value="null"/>
-                          <Data value="null"/>
-                          <Data value="null"/>
-                          <Data value="null"/>
-                          <Data value="null"/>
-                          <Data value="null"/>
-                          <Data value="null"/>
-                        </Column>
-                        <Column editable="false" title="NO TELP" type="java.lang.Object">
-                          <Data value="SQS"/>
-                          <Data value="QS"/>
+                        <Column editable="true" title="NO TELP" type="java.lang.Object">
+                          <Data value="0812399900012"/>
+                          <Data value="0852399901221"/>
                           <Data value="null"/>
                           <Data value="null"/>
                           <Data value="null"/>
@@ -294,7 +294,7 @@
                           <Editor/>
                           <Renderer/>
                         </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                        <Column maxWidth="50" minWidth="50" prefWidth="50" resizable="true">
                           <Title/>
                           <Editor/>
                           <Renderer/>
@@ -359,7 +359,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="prevButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jButton4"/>
+            <Property name="text" type="java.lang.String" value="prev"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="prevButtonActionPerformed"/>
@@ -367,7 +367,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="nextButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jButton4"/>
+            <Property name="text" type="java.lang.String" value="next"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nextButtonActionPerformed"/>
@@ -375,12 +375,12 @@
         </Component>
         <Component class="javax.swing.JLabel" name="page">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jLabel2"/>
+            <Property name="text" type="java.lang.String" value="page 0"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="count">
           <Properties>
-            <Property name="text" type="java.lang.String" value="jLabel2"/>
+            <Property name="text" type="java.lang.String" value="Total 2"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnHapus">
